--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <div class="intro" id="intro"><button>ENTER</button></div>
-  <video id="v" loop playsinline autoplay muted preload="auto">
+  <video id="v" loop playsinline muted preload="auto">
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/liveleak.mp4" type="video/mp4">
   </video>
   <script>
@@ -87,16 +87,21 @@
     const video = document.getElementById("v");
     const button = intro.querySelector("button");
     let isIntroVisible = true;
+
     const playVideo = () => {
       isIntroVisible = false;
       intro.classList.add("hidden");
-      video.play().then(() => {
-        video.muted = false;
-        video.play();
-      }).catch(e => console.error("Video play error:", e));
+      video.play().catch(() => {});
     };
-    button.addEventListener("click", playVideo);
-    button.addEventListener("touchstart", playVideo, { passive: true });
+
+    button.addEventListener("click", () => {
+      playVideo();
+    });
+
+    button.addEventListener("touchstart", () => {
+      playVideo();
+    }, { passive: true });
+
     document.addEventListener("visibilitychange", () => {
       if (document.visibilityState === "visible" && !isIntroVisible) {
         video.play().catch(() => {});
