--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       justify-content: center;
       align-items: center;
       z-index: 100;
-      transition: opacity 1s ease;
+      transition: opacity 0.6s ease;
     }
     .intro.hidden {
       opacity: 0;
@@ -56,29 +56,53 @@
     }
     .glow-text {
       position: absolute;
-      bottom: 40px;
+      bottom: 50px;
       width: 100%;
       text-align: center;
-      font-size: 4rem;
-      font-weight: bold;
-      color: white;
-      animation: pulse 2s infinite;
+      font-size: 6rem;
+      font-weight: 700;
+      color: black;
+      animation: pulseGlow 2s infinite;
       text-shadow:
-        0 0 10px white,
-        0 0 20px white,
-        0 0 40px white,
+        0 0 20px #bbb,
+        0 0 40px #ddd,
+        0 0 60px white,
         0 0 80px white;
       pointer-events: none;
     }
-    @keyframes pulse {
-      0% { opacity: 1; transform: scale(1); }
-      50% { opacity: 0.8; transform: scale(1.05); }
-      100% { opacity: 1; transform: scale(1); }
+    @keyframes pulseGlow {
+      0% {
+        opacity: 1;
+        transform: scale(1);
+        text-shadow:
+          0 0 10px #999,
+          0 0 20px #aaa,
+          0 0 40px #ccc,
+          0 0 60px white;
+      }
+      50% {
+        opacity: 0.8;
+        transform: scale(1.05);
+        text-shadow:
+          0 0 20px #ccc,
+          0 0 40px #eee,
+          0 0 80px white,
+          0 0 100px white;
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1);
+        text-shadow:
+          0 0 10px #999,
+          0 0 20px #aaa,
+          0 0 40px #ccc,
+          0 0 60px white;
+      }
     }
     @media (max-width: 600px) {
       .glow-text {
-        font-size: 2rem;
-        bottom: 20px;
+        font-size: 3rem;
+        bottom: 30px;
       }
       .intro img {
         max-width: 80%;
@@ -88,32 +112,32 @@
   </style>
 </head>
 <body>
-  <!-- INTRO IMAGE OVERLAY -->
+  <!-- INTRO IMAGE -->
   <div class="intro" id="intro">
     <img src="https://github.com/jujuexe/Juju-wtf/blob/main/download%20(1).png?raw=true" alt="JuJu Logo">
   </div>
 
-  <!-- BACKGROUND VIDEO -->
+  <!-- VIDEO -->
   <video id="v" loop playsinline preload="auto" muted>
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/ssvid.net--JAS-39-Gripen-Amazing-Spiral-with-Flares-4K_1080p.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- PULSING TEXT -->
+  <!-- TEXT -->
   <div class="glow-text">JuJu loves Israel</div>
 
+  <!-- SCRIPT -->
   <script>
     const intro = document.getElementById("intro");
     const video = document.getElementById("v");
 
-    // Start playback once DOM is loaded
     window.addEventListener("load", () => {
       video.play().catch(err => console.error("Autoplay failed:", err));
       setTimeout(() => {
         intro.classList.add("hidden");
         video.muted = false;
         video.play().catch(err => console.error("Playback failed:", err));
-      }, 1000); // 1 second delay
+      }, 820); // 0.82 seconds
     });
 
     document.addEventListener("visibilitychange", () => {
