--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true">
+  <link rel="icon" type="image/png" href="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg">
   <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
   <meta property="og:description" content="haiii everyone :3">
-  <meta property="og:image" content="https://github.com/jujuexe/fr/blob/main/980195a4b420a62cfca4fa7450db7ab7.png?raw=true">
+  <meta property="og:image" content="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>♡ juju.wtf</title>
@@ -215,15 +215,15 @@
   </div>
 
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
-    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle.mp4" type="video/mp4">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle%20(1).mp4" type="video/mp4">
   </video>
 
   <div class="container">
-    <img src="https://r2.guns.lol/147cf449-399d-4408-b008-f07f093c5448.webp" alt="pfp" class="pfp">
+    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true" alt="pfp" class="pfp">
     <div class="title">JuJu.wtf</div>
     <div class="discord-wrapper">
-      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
-      <div class="discord-tooltip">Invite to JuJu Fanclub</div>
+      <a href="https://discordapp.com/users/151014356476362752" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
+      <div class="discord-tooltip">Add me on discord :)</div>
       <a href="https://x.com/jujuwtfz" class="x-logo" aria-label="X" target="_blank" rel="noopener noreferrer">x</a>
       <div class="x-tooltip">Follow @jujuwtfz on X</div>
     </div>
@@ -303,3 +303,4 @@
   </script>
 </body>
 </html>
+
