--- a/index.html
+++ b/index.html
@@ -1,306 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg">
+
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,
+    <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+      <text x='50%' y='55%' dominant-baseline='middle' text-anchor='middle'
+        font-size='80' fill='white' transform='rotate(180 50 50)'>✝</text>
+    </svg>">
+
+
   <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
-  <meta property="og:description" content="haiii everyone :3">
-  <meta property="og:image" content="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg">
+  <meta property="og:description" content=":3">
+  <meta property="og:image"
+        content="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>♡ juju.wtf</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
-    * {
-      box-sizing: border-box;
+    * { box-sizing: border-box; }
+
+    :root {
+      --blue: #4da3ff;
+      --blue-soft: #7fbaff;
+      --bg: #05070c;
     }
+
     body {
       margin: 0;
-      padding: 0;
-      background-color: #0a0a0a;
+      background: var(--bg);
       color: #fff;
       font-family: Inter, sans-serif;
       height: 100vh;
       overflow: hidden;
     }
+
     #background-video {
       position: fixed;
-      top: 0;
-      left: 0;
+      inset: 0;
       width: 100vw;
       height: 100vh;
       object-fit: cover;
       z-index: -1;
     }
+
+ 
     .intro-screen {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       background: #000;
-      color: #fff;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       font-size: 2rem;
       cursor: pointer;
-      transition: opacity .5s ease;
       z-index: 100;
-      text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4;
-      animation: pulseGlow 2s infinite ease-in-out;
+      transition: opacity .5s ease;
     }
+
     .intro-screen img {
       width: 120px;
       height: 120px;
       margin-bottom: 15px;
       border-radius: 50%;
       object-fit: cover;
-      box-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
-      animation: pulseGlow 2s infinite ease-in-out;
+      box-shadow: 0 0 20px var(--blue);
     }
+
     .hidden {
       opacity: 0;
       pointer-events: none;
     }
+
+    
     .container {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
-      z-index: 10;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
     }
+
     .pfp {
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      object-fit: cover;
       margin-bottom: 20px;
-      box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      box-shadow: 0 0 25px var(--blue);
       animation: pulseGlow 2s infinite ease-in-out;
     }
+
     .title {
       font-size: 2rem;
-      text-transform: lowercase;
       letter-spacing: .1rem;
-      position: relative;
-      transition: transform .3s ease, opacity .5s ease;
       animation: pulseGlow 2s infinite ease-in-out;
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      transition: transform .3s ease;
     }
-    .discord-tooltip,
-    .x-tooltip,
-    #pause-button,
-    #song-title {
-      animation: pulseGlow 2s infinite ease-in-out;
-    }
+
     @keyframes pulseGlow {
-      0%, 100% {
-        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+      0%,100% {
+        text-shadow:
+          0 0 10px var(--blue),
+          0 0 25px var(--blue);
       }
       50% {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff69b4, 0 0 40px #ff69b4;
+        text-shadow:
+          0 0 20px var(--blue-soft),
+          0 0 40px var(--blue);
       }
     }
+
     .discord-wrapper {
       position: relative;
-      display: flex;
-      gap: 15px;
-      justify-content: center;
       margin-top: 30px;
     }
-    .discord-tooltip, .x-tooltip {
-      position: absolute;
-      bottom: 35px;
-      background: rgba(0, 0, 0, 0.75);
-      color: #fff;
-      padding: 4px 8px;
-      border-radius: 6px;
-      white-space: nowrap;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
-      font-size: 0.7rem;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    .discord-wrapper a:hover + .discord-tooltip,
-    .x-logo:hover + .x-tooltip {
-      opacity: 1;
-    }
-    .discord-logo, .x-logo {
-      display: inline-block;
-      width: 30px;
-      height: 30px;
+
+    .discord-logo {
+      width: 32px;
+      height: 32px;
+      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
       background-size: contain;
       background-repeat: no-repeat;
-      background-position: center;
+      filter: drop-shadow(0 0 10px var(--blue));
+      transition: transform .3s ease;
+      display: inline-block;
       text-indent: -9999px;
-      overflow: hidden;
-      transition: transform 0.3s ease;
-      filter: drop-shadow(0 0 5px #fff) drop-shadow(0 0 10px #ff69b4);
-      animation: pulseGlow 2s infinite ease-in-out;
     }
-    .discord-logo {
-      background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
+
+    .discord-logo:hover {
+      transform: scale(1.1);
     }
-    .x-logo {
-      background-image: url('https://github.com/jujuexe/Juju-wtf/blob/main/whitex.png?raw=true');
-    }
-    .discord-logo:hover, .x-logo:hover {
-      transform: scale(1.05);
-      filter: drop-shadow(0 0 10px #fff) drop-shadow(0 0 20px #ff69b4);
-    }
+
+   
     #audio-controls {
       position: absolute;
       bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(0, 0, 0, .7);
+      background: rgba(0,0,0,.7);
       padding: 10px 20px;
       border-radius: 10px;
       text-align: center;
       opacity: 0;
-      animation: fadeIn 1s ease-out forwards;
-      z-index: 10;
+      animation: fadeIn 1s forwards;
     }
-    #pause-button {
-      background: none;
-      border: none;
-      color: #fff;
-      cursor: pointer;
-      margin-top: 5px;
-      text-transform: lowercase;
-    }
+
     @keyframes fadeIn {
-      to {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0);
-      }
+      to { opacity: 1; }
     }
-    .sparkle, .intro-dot {
+
+    
+    .sparkle {
       position: fixed;
       width: 8px;
       height: 8px;
       background: white;
       border-radius: 50%;
       pointer-events: none;
-      z-index: 9999;
-      box-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
-      animation: sparkleFade 1s ease-out forwards;
+      box-shadow:
+        0 0 10px var(--blue),
+        0 0 25px var(--blue);
+      animation: sparkleFade 1s forwards;
     }
+
     @keyframes sparkleFade {
-      0% {
-        opacity: 1;
-        transform: scale(1);
-      }
-      100% {
+      to {
         opacity: 0;
-        transform: scale(0.5) translateY(-10px);
+        transform: scale(.5) translateY(-10px);
       }
     }
   </style>
 </head>
+
 <body>
-  <div class="intro-screen glow" id="intro-screen" aria-label="Enter site">
-    <img src="https://images.genius.com/9304b31c82b7474e4ee9c5188637fcf8.500x500x1.jpg" alt="Logo">
-    click to enter <3
+
+  <div class="intro-screen" id="intro-screen">
+    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
+    click to enter
   </div>
 
-  <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
+  <video id="background-video" loop playsinline>
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle%20(1).mp4" type="video/mp4">
   </video>
 
   <div class="container">
-    <img src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true" alt="pfp" class="pfp">
+    <img class="pfp"
+      src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
+
     <div class="title">JuJu.wtf</div>
+
     <div class="discord-wrapper">
-      <a href="https://discordapp.com/users/151014356476362752" class="discord-logo" aria-label="discord" target="_blank" rel="noopener noreferrer">discord</a>
-      <div class="discord-tooltip">Add me on discord :)</div>
-      <a href="https://x.com/jujuwtfz" class="x-logo" aria-label="X" target="_blank" rel="noopener noreferrer">x</a>
-      <div class="x-tooltip">Follow @jujuwtfz on X</div>
+      <a class="discord-logo"
+         href="https://discordapp.com/users/151014356476362752"
+         target="_blank"
+         rel="noopener">discord</a>
     </div>
   </div>
 
   <div id="audio-controls">
-    <div id="song-title">Now Playing: Freestyle</div>
+    <div>Now Playing: Freestyle</div>
     <button id="pause-button">Pause ⏯</button>
   </div>
 
   <script>
-    let titleText = "♡ JuJu.wtf ";
-    let index = 0;
-    setInterval(() => {
-      document.title = titleText.slice(index) + titleText.slice(0, index);
-      index = (index + 1) % titleText.length;
-    }, 200);
+    const video = document.getElementById('background-video');
+    const intro = document.getElementById('intro-screen');
+    const pauseBtn = document.getElementById('pause-button');
+    let paused = false;
 
-    const messages = ["haiii :3", "JuJu.wtf"];
-    let msgIndex = 0;
-    setInterval(() => {
-      const titleElement = document.querySelector('.title');
-      titleElement.style.opacity = 0;
-      setTimeout(() => {
-        titleElement.textContent = messages[msgIndex];
-        titleElement.style.transform = 'translateY(-3px)';
-        titleElement.style.opacity = 1;
-        setTimeout(() => {
-          titleElement.style.transform = 'translateY(0)';
-        }, 150);
-        msgIndex = (msgIndex + 1) % messages.length;
-      }, 500);
-    }, 5000);
+    intro.onclick = () => {
+      intro.classList.add('hidden');
+      video.play();
+    };
+
+    pauseBtn.onclick = () => {
+      paused ? video.play() : video.pause();
+      pauseBtn.textContent = paused ? 'Pause ⏯' : 'Play ⏯';
+      paused = !paused;
+    };
 
     document.addEventListener('mousemove', e => {
-      const sparkle = document.createElement('div');
-      sparkle.className = 'sparkle';
-      document.body.appendChild(sparkle);
-      sparkle.style.left = `${e.clientX}px`;
-      sparkle.style.top = `${e.clientY}px`;
-      setTimeout(() => sparkle.remove(), 1000);
+      const s = document.createElement('div');
+      s.className = 'sparkle';
+      s.style.left = e.clientX + 'px';
+      s.style.top = e.clientY + 'px';
+      document.body.appendChild(s);
+      setTimeout(() => s.remove(), 1000);
     });
-
-    const introScreen = document.getElementById('intro-screen');
-    const video = document.getElementById('background-video');
-    const pauseButton = document.getElementById('pause-button');
-    let isPaused = false;
-
-    introScreen.addEventListener('click', function () {
-      this.classList.add('hidden');
-      video.play().catch(error => console.error('Video playback failed:', error));
-    });
-
-    pauseButton.addEventListener('click', () => {
-      if (isPaused) {
-        video.play().catch(error => console.error('Video playback failed:', error));
-        pauseButton.textContent = 'Pause ⏯';
-      } else {
-        video.pause();
-        pauseButton.textContent = 'Play ⏯';
-      }
-      isPaused = !isPaused;
-    });
-
-    setInterval(() => {
-      const intro = document.getElementById('intro-screen');
-      if (intro.classList.contains('hidden')) return;
-      for (let i = 0; i < 4; i++) {
-        const dot = document.createElement('div');
-        dot.className = 'intro-dot';
-        dot.style.left = Math.random() * window.innerWidth + 'px';
-        dot.style.top = Math.random() * window.innerHeight + 'px';
-        intro.appendChild(dot);
-        setTimeout(() => dot.remove(), 800);
-      }
-    }, 120);
   </script>
+
 </body>
 </html>
-
