--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%' y='55%' dominant-baseline='middle' text-anchor='middle' font-size='80' fill='white' transform='rotate(180 50 50)'>✝</text></svg>">
-<meta property="og:url" content="https://JuJu.wtf/">
-<meta property="og:type" content="website">
-<meta property="og:title" content="JuJu">
-<meta property="og:description" content=":3">
 <meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,38 +12,38 @@
 :root{--b:#4da3ff;--bs:#7fbaff;--bg:#05070c}
 body{margin:0;background:var(--bg);color:#fff;font-family:Inter,sans-serif;height:100vh;overflow:hidden}
 #background-video{position:fixed;inset:0;width:100vw;height:100vh;object-fit:cover;z-index:-1}
-.intro-screen{position:fixed;inset:0;background:#000;display:flex;flex-direction:column;justify-content:center;align-items:center;font-size:2rem;cursor:pointer;z-index:100;transition:opacity .5s ease}
-.intro-screen img{width:120px;height:120px;border-radius:50%;margin-bottom:20px;box-shadow:0 0 25px var(--b);animation:pulse 2s infinite}
+.intro-screen{position:fixed;inset:0;background:#000;display:flex;flex-direction:column;justify-content:center;align-items:center;font-size:1rem;cursor:pointer;z-index:100}
+.intro-screen img{width:120px;height:120px;border-radius:50%;margin-bottom:15px;box-shadow:0 0 25px var(--b)}
 .hidden{opacity:0;pointer-events:none}
 .container{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;display:flex;flex-direction:column;align-items:center}
-.pfp{width:100px;height:100px;border-radius:50%;margin-bottom:20px;box-shadow:0 0 30px var(--b);animation:pulse 2s infinite}
-.title{font-size:2rem;letter-spacing:.1rem;animation:pulse 2s infinite}
-@keyframes pulse{0%,100%{text-shadow:0 0 10px var(--b),0 0 25px var(--b)}50%{text-shadow:0 0 20px var(--bs),0 0 40px var(--b)}}
-.discord-wrapper{margin-top:30px}
-.discord-logo{width:32px;height:32px;background:url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true') center/contain no-repeat;filter:drop-shadow(0 0 15px var(--b));display:inline-block;animation:pulse 2s infinite;text-indent:-9999px}
-#audio-controls{position:absolute;bottom:20px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,.7);padding:10px 20px;border-radius:12px;animation:pulse 2s infinite}
-#pause-button{background:none;border:none;color:#fff;font-family:inherit;cursor:pointer;animation:pulse 2s infinite}
-.sparkle{position:fixed;width:2px;height:60px;background:linear-gradient(to top,transparent,var(--b));pointer-events:none;filter:drop-shadow(0 0 10px var(--b));animation:shoot .8s linear forwards}
-@keyframes shoot{from{opacity:1;transform:translate(0,0)}to{opacity:0;transform:translate(var(--dx),var(--dy))}}
+.pfp{width:100px;height:100px;border-radius:50%;margin-bottom:20px;box-shadow:0 0 25px var(--b)}
+.title,.bounce{font-size:1rem;animation:bounce 2s ease-in-out infinite;text-shadow:0 0 10px var(--b),0 0 25px var(--b)}
+@keyframes bounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-4px)}}
+.discord-wrapper{margin-top:25px}
+.discord-logo{width:28px;height:28px;background:url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true') center/contain no-repeat;filter:drop-shadow(0 0 12px var(--b))}
+#audio-controls{position:absolute;bottom:20px;left:50%;transform:translateX(-50%);background:rgba(0,0,0,.6);padding:8px 14px;border-radius:10px;box-shadow:0 0 20px var(--b)}
+#pause-button{background:none;border:none;color:#fff;font-family:inherit;font-size:1rem;cursor:pointer}
+.shoot{position:fixed;width:1px;height:20px;background:linear-gradient(to top,transparent,var(--b));pointer-events:none;filter:drop-shadow(0 0 6px var(--b));animation:shoot .6s linear forwards}
+@keyframes shoot{to{opacity:0;transform:translate(var(--dx),var(--dy))}}
 </style>
 </head>
 <body>
 <div class="intro-screen" id="intro">
 <img src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
-<div class="title">click to enter</div>
+<div class="bounce">click to enter</div>
 </div>
 <video id="background-video" loop playsinline>
 <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle%20(1).mp4" type="video/mp4">
 </video>
 <div class="container">
 <img class="pfp" src="https://github.com/jujuexe/Juju-wtf/blob/main/cat%20pfp%20blue.png?raw=true">
-<div class="title">JuJu.wtf</div>
+<div class="bounce">JuJu.wtf</div>
 <div class="discord-wrapper">
-<a class="discord-logo" href="https://discordapp.com/users/151014356476362752" target="_blank" rel="noopener">discord</a>
+<a class="discord-logo" href="https://discordapp.com/users/151014356476362752" target="_blank" rel="noopener"></a>
 </div>
 </div>
 <div id="audio-controls">
-<div class="title">Now Playing: Freestyle</div>
+<div class="bounce">Now Playing: Freestyle</div>
 <button id="pause-button">Pause ⏯</button>
 </div>
 <script>
@@ -58,16 +54,15 @@ let s=false
 i.onclick=()=>{i.classList.add('hidden');v.play()}
 p.onclick=()=>{s?v.play():v.pause();p.textContent=s?'Pause ⏯':'Play ⏯';s=!s}
 document.addEventListener('mousemove',e=>{
-for(let n=0;n<2;n++){
 const d=document.createElement('div')
-d.className='sparkle'
+d.className='shoot'
 d.style.left=e.clientX+'px'
 d.style.top=e.clientY+'px'
-d.style.setProperty('--dx',(Math.random()*200-100)+'px')
-d.style.setProperty('--dy',(-Math.random()*300)+'px')
+d.style.setProperty('--dx',(Math.random()*80-40)+'px')
+d.style.setProperty('--dy',(-Math.random()*120)+'px')
 document.body.appendChild(d)
-setTimeout(()=>d.remove(),800)
-}})
+setTimeout(()=>d.remove(),600)
+})
 </script>
 </body>
 </html>
